--- a/css/style.css
+++ b/css/style.css
@@ -5,34 +5,32 @@ footer {
   overflow: hidden;
   width: 100%;
   height: 4rem;
-  background: linear-gradient(black 0%, #cf874c 10%); }
+  background: linear-gradient(black 0%, #cf874c 10%);
+  align-items: center;
+  justify-content: center; }
 
-.footer__logo {
-  display: inline-block; }
+.footer__nav {
+  display: flex;
+  flex-direction: column; }
+
+.redes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; }
+
+.redes a {
+  margin: 0.5rem;
+  font-weight: 600;
+  color: black; }
+
+.redes a:hover {
+  text-decoration: underline; }
 
 .footer__logo--hijo {
   height: 3.8rem;
   margin-top: 0.3rem;
   margin-left: 0.2rem; }
-
-.footer__escrito {
-  /* Grid container */
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 3fr;
-  gap: 2.5rem;
-  width: 100%;
-  align-content: center; }
-
-.footer__disclaimer {
-  /* Grid item */
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 1rem;
-  color: rgba(19, 19, 19, 0.788);
-  padding-left: 25%; }
-
-.botonesfooter {
-  /* Grid item */
-  text-align: right; }
 
 /* ------------------------------------------------------- */
 header {
