--- a/scss/_foot&head.scss
+++ b/scss/_foot&head.scss
@@ -5,34 +5,36 @@ footer {
     width: 100%;
     height: 4rem;
     background:linear-gradient(black 0%, rgb(207, 135, 76) 10%);
+    align-items: center;
+    justify-content: center;
 }
 
-.footer{
-    &__logo{
-    display: inline-block;
-    }
-    &__logo--hijo{
-        height: 3.8rem;
-        margin-top: 0.3rem;
-        margin-left: 0.2rem;
-    }
-    &__escrito{ /* Grid container */  
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 3fr;
-        gap: 2.5rem;
-        width: 100%;
-        align-content: center;
-    }
-    &__disclaimer{ /* Grid item */
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        font-size: 1rem;
-        color: rgba(19, 19, 19, 0.788);
-        padding-left: 25%;
-    }
+.footer__nav{
+    display: flex;
+    flex-direction: column;
 }
 
-.botonesfooter{ /* Grid item */
-    text-align: right; 
+.redes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.redes a {
+    margin: 0.5rem;
+    font-weight: 600;
+    color: black;
+}
+
+.redes a:hover {
+    text-decoration: underline;
+}
+
+.footer__logo--hijo{
+    height: 3.8rem;
+    margin-top: 0.3rem;
+    margin-left: 0.2rem;
 }
 
 
